--- a/CodeStudioAutomation-master/CodeStudioAutomation-master/CucumberJava/pom.xml
+++ b/CodeStudioAutomation-master/CodeStudioAutomation-master/CucumberJava/pom.xml
@@ -18,6 +18,16 @@
     <artifactId>selenium-chrome-driver</artifactId>
     <version>4.27.0</version>
 </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.23.1</version>
+      </dependency>
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>5.7.0</version>
+      </dependency>
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
@@ -56,6 +66,24 @@
     <version>4.13.2</version>
     <scope>test</scope>
 </dependency>
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>5.9.2</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.23.1</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.aventstack</groupId>
+          <artifactId>extentreports</artifactId>
+          <version>5.0.9</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
 </project>
