--- a/CodeStudioAutomation-master/CodeStudioAutomation-master/Automation/pom.xml
+++ b/CodeStudioAutomation-master/CodeStudioAutomation-master/Automation/pom.xml
@@ -64,6 +64,12 @@
     <version>5.5.3</version>
 </dependency>
 
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.0.33</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
