--- a/CodeStudioAutomation-master/CodeStudioAutomation-master/RestAssured/pom.xml
+++ b/CodeStudioAutomation-master/CodeStudioAutomation-master/RestAssured/pom.xml
@@ -13,6 +13,12 @@
 			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.2</version>
+			<scope>test</scope>
+		</dependency>
 		<!--
 		https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
 		<dependency>
