--- a/CodeStudioAutomation-master/CodeStudioAutomation-master/Automation/src/test/java/basicJava/collections/prop.properties
+++ b/CodeStudioAutomation-master/CodeStudioAutomation-master/Automation/src/test/java/basicJava/collections/prop.properties
@@ -1,4 +1,4 @@
-#Details
-#Mon Jan 05 22:34:30 IST 2026
-designation=SDET
+#comment
+#Wed Jan 14 12:14:35 IST 2026
+firstName=Akshay
 lastName=Kalam
